<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="center"
        tools:src="@drawable/bkg_colleagues_lunch" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shade_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_app_logo"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_hot_bowl"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/login_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="64sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:text="@string/login_subtitle"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_button_facebook"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/com_facebook_blue"
                android:text="@string/login_button_facebook_text"
                app:icon="@drawable/ic_facebook_logo_white_58"
                app:iconTint="@null"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/login_button_google"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/white"
                android:text="@string/login_button_google_text"
                android:textColor="@color/black"
                app:icon="@drawable/ic_google_logo_512"
                app:iconTint="@null" />
        </LinearLayout>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>