<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.details.DetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/details_appbar"
        android:layout_width="match_parent"
        android:layout_height="410dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/details_collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextColor="@android:color/transparent"
            app:contentScrim="@color/primaryColor"
            app:expandedTitleTextColor="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/details_restaurant_photo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                tools:src="@drawable/bkg_lunch" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="bottom"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/details_restaurant_info"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@color/primaryColor"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingStart="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/details_restaurant_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:lines="1"
                                android:maxEms="12"
                                android:textColor="@color/white"
                                android:textSize="17sp"
                                tools:text="Restaurant" />

                            <RatingBar
                                android:id="@+id/details_restaurant_rating"
                                style="@style/RatingBar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:isIndicator="true"
                                android:numStars="3"
                                android:paddingTop="4dp"
                                android:stepSize="0.5"
                                tools:rating="1.5" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/details_restaurant_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="10dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:textColor="@color/white"
                            tools:text="Address" />

                        <TextView
                            android:id="@+id/details_restaurant_opening_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="10dp"
                            android:lines="1"
                            android:textColor="@color/white"
                            android:textStyle="italic"
                            tools:text="Open" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="79dp"
                        android:background="@android:color/white"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/details_button_call"
                            style="@style/DetailsActivityAction"
                            android:drawableTop="@drawable/ic_baseline_call_24"
                            android:text="@string/details_button_call" />

                        <Button
                            android:id="@+id/details_button_like"
                            style="@style/DetailsActivityAction"
                            android:drawableTop="@drawable/tgl_details_like"
                            android:text="@string/details_button_like" />

                        <Button
                            android:id="@+id/details_button_website"
                            style="@style/DetailsActivityAction"
                            android:drawableTop="@drawable/ic_baseline_public_24"
                            android:text="@string/details_button_website" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="bottom"
                        android:background="@drawable/custom_divider" />

                </LinearLayout>
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/details_fab_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/details_select_restaurant_desc"
        android:enabled="false"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_anchor="@id/details_toolbar"
        app:layout_anchorGravity="top|right" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/details_fab_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/transparent_grey"
        android:contentDescription="@string/details_back_button_desc"
        android:fitsSystemWindows="true"
        android:outlineProvider="none"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:fabCustomSize="24dp"
        app:layout_anchor="@id/details_restaurant_photo"
        app:layout_anchorGravity="top|left"
        app:tint="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_NestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/details_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/activity_details_item" />
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/details_workmates_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:text="@string/workmates_empty"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_anchor="@id/details_NestedScrollView"
        app:layout_anchorGravity="top|center_horizontal" />

    <ProgressBar
        android:id="@+id/details_ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>